added_TrainingManagement_Entities

--- a/src/InternshipManagementSystem.Blazor.WebApp/appsettings.json
+++ b/src/InternshipManagementSystem.Blazor.WebApp/appsettings.json
@@ -4,7 +4,7 @@
     "RedirectAllowedUrls": "https://localhost:44335"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=InternshipManagementSystem;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=.;Database=InternshipManagementSystem;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44335",
@@ -14,3 +14,4 @@
     "DefaultPassPhrase": "qAL39SdikS8ojg3T"
   }
 }
+
