--- a/src/InternshipManagementSystem.HttpApi.Host/appsettings.json
+++ b/src/InternshipManagementSystem.HttpApi.Host/appsettings.json
@@ -3,7 +3,8 @@
     "SelfUrl": "https://localhost:44373",
     "ClientUrl": "http://localhost:4200",
     "CorsOrigins": "https://*.InternshipManagementSystem.com,http://localhost:4200",
-    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44383"
+    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44383",
+    "UploadRootPath": ""
   },
   "ConnectionStrings": {
     "Default": "Server=.;Database=InternshipManagementSystem;Trusted_Connection=True;TrustServerCertificate=True"
