--- a/src/InternshipManagementSystem.Application/InternshipManagementSystem.Application.csproj
+++ b/src/InternshipManagementSystem.Application/InternshipManagementSystem.Application.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="9.1.1" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="9.1.1" />
